chore: cleanup